[gd_scene load_steps=3 format=2]

[ext_resource path="res://Grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://MainScene.gd" type="Script" id=2]

[node name="MainScene" type="Node2D"]
script = ExtResource( 2 )

[node name="Grid" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -1 )
cell_custom_transform = Transform2D( 32, 0, 0, 32, 0, 0 )
[connection signal="eat_food" from="Grid" to="." method="_on_Grid_eat_food"]
[connection signal="game_over" from="Grid" to="." method="_on_Grid_game_over"]
